Divs laterais adicionadas para uso posterior

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html>
 
 <head>
@@ -13,21 +13,24 @@
 <body>
     <div id="container">
         <h1>Sistemas Multimidia: Transito Cidadao</h1>
-        <div id="cenario">
+        <div id="esquerda" class="box">
+            Conteudo da div esquerda
+        </div>
+        <div id="cenario" class="box">
             <canvas id="mycanvas" width="612" height="440">
                 Seu navegador fede! atualize 
             </canvas>
         </div>
-
-
-
-
-        <!--script que constroi o cenario-->
-        <script type="text/javascript" src="contexto.js">
-
-
-        </script>
+        <div id="direita" class="box">
+            Conteudo da div direita
+        </div>
     </div>
+
+    <!--script que constroi o cenario-->
+    <script type="text/javascript" src="contexto.js">
+
+
+    </script>
 </body>
 
 </html>
