Fracionamento da imagem do policial e adaptação no script

--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!--
+    ICA 3/4 de Sistemas Multimidia
+    Turma: Sistemas de Informaçao 5 noturno
+    Tema: Educacao no Transito
+        Grupo: 
+            Jeferson Silva Dettman
+            Mateus Garcia Lopes
+            Maicon Loureiro
+            Michele Dalarme
+            Vitor Knupp Costa
+-->
 <html>
 
 <head>
@@ -33,10 +44,10 @@
         </div>
     </div>
     
-
+    
     <!--script que constroi o cenario-->
     <script type="text/javascript" src="contexto.js"></script>
-    <!--script que gera animaçoes na placa-->
+    <!--script que gera animaçoes -->
     <script type="text/javascript" src="AnimaPlaca.js"></script>
 </body>
 
