Mecanismo básico de animação do Policial

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             </canvas>
         </div>
         <div id="direita" class="box">
-            Conteudo da div direita
+            Testes de animaçao do policial falando<hr>
+            <input type="button" value="esquerda" onclick="esquerda()">
+            <input type="button" value="abre" onclick = "abre()">
+            <input type="button" value="parado" onclick="parado()">
+            <input type="button" value="direita" onclick = "direita()">
         </div>
     </div>
     
@@ -49,6 +53,8 @@
     <script type="text/javascript" src="contexto.js"></script>
     <!--script que gera animaçoes -->
     <script type="text/javascript" src="AnimaPlaca.js"></script>
+    <!--script que anima os sprites do policial -->
+    <script type="text/javascript" src="AnimaPolicial.js"></script>
 </body>
 
 </html>
