adicionado um icone ao pojeto ;)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" href="estilo.css" rel="stylesheet">
+    <link rel="shortcut icon" href="icone.png" type="image/png" />
 </head>
 
 <body>
@@ -39,7 +40,8 @@
             </canvas>
         </div>
         <div id="direita" class="box">
-            Testes de animaçao do policial falando<hr>
+            Testes de animaçao do policial.<br>
+            Use as setas do teclado para testar<hr>
             <input type="button" value="esquerda" onclick="esquerda()">
             <input type="button" value="abre" onclick = "abre()">
             <input type="button" value="parado" onclick="parado()">
