Quiz dinamico em seu primeiro prototipo funcional

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </canvas>
         </div>
         <div id="direita" class="box">
-            Escolha uma resposta
+            <a href = '#' onclick = NovaPergunta()>Começar o jogo!</a>
             <hr>
             <div id='quiz'>
             </div>
@@ -57,6 +57,8 @@
     <script type="text/javascript" src="AnimaPolicial.js"></script>
     <!--script que gera e valida as perguntas e formularios do quiz-->
     <script type="text/javascript" src="quiz.js"></script>
+    <!--script que chama e controla as perguntas -->
+    <script type="text/javascript" src = 'controle.js'></script>
 
 </body>
 
