ajustes na geração das perguntas

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </canvas>
         </div>
         <div id="direita" class="box">
-            <a href = '#' onclick = NovaPergunta()>Começar o jogo!</a>
+            <a href = '#' onclick = NovaPergunta()>Novo Jogo!</a>
             <hr>
             <div id='quiz'>
             </div>
