--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <head>
     <title>
-        Transito Cidadao 1.0
+        Go Drive! 1.0
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,12 +24,13 @@
 
 <body>
     <div id="container">
-        <h1>Sistemas Multimidia: Transito Cidadao</h1>
+        <h1>Sistemas Multimidia: Go Drive!</h1>
         <div id="esquerda" class="box">
             Painel de testes de javascript
             <hr>
             <input type="button" onclick='limpatela()' value="Limpar a tela do canvas"><br><br>
 
+            <input type="button" onclick="OhORapa()" value='falar'><br><br>
 
         </div>
         <div id="cenario" class="box">
