Update Quiz e preparação dos audios

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </canvas>
         </div>
         <div id="direita" class="box">
-            <a href = '#' onclick = NovaPergunta()>Novo Jogo!</a>
+            <a href = '#' onclick = novojogo()>Novo Jogo!</a>
             <hr>
             <div id='quiz'>
             </div>
@@ -55,7 +55,7 @@
     <script type="text/javascript" src="AnimaPolicial.js"></script>
     <!--script que gera e valida as perguntas e formularios do quiz-->
     <script type="text/javascript" src="quiz.js"></script>
-    <!--script que chama e controla as perguntas -->
+    <!--script que chama e controla as perguntas e as falas -->
     <script type="text/javascript" src = 'controle.js'></script>
 
 </body>
